--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           </div>
         </div>
         <div class="text-center mt-4">
-          <a class="btn btn-xl btn-outline-light" href="https://drive.google.com/file/d/138kN6kU7_1on6M6lR3FlbcMZIDxGYDvR/view">
+          <a class="btn btn-xl btn-outline-light" href="https://www.dropbox.com/s/poqa0t8c61zhaqx/Resume_Ja%27Sean%20Holmes.pdf?dl=0">
             <i class="fas fa-download mr-2"></i>
             Download Resume
           </a>
